--- a/ab.html
+++ b/ab.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>APNA COLLEGE DELTA</h1>
-    <h3>hello this is all about delta web development</h3>
-    <h5>it is actually used to build websites</h5>
+    <h3>hello this is all abo4t delta web development</h3>
+    <h5>it is actually used t6 build websites</h5>
 
 </body>
 </html>
